--- a/gtk-3.0/gtk.css
+++ b/gtk-3.0/gtk.css
@@ -1,1 +1,1 @@
-/* Adwaita is now part of GTK+ 3, this file is no longer used */
+@import url("resource:///org/gtk/libgtk/theme/Adwaita/gtk-contained.css");
