--- a/gtk-3.0/gtk.css
+++ b/gtk-3.0/gtk.css
@@ -9,12 +9,27 @@ iconview.view {
     background-color: transparent;
 }
 
+iconview.view:selected {
+    border-radius: 7px;
+    background-color: @theme_selected_bg_color;
+}
+
+iconview.view:selected:focus {
+    border-radius: 7px;
+    background-color: @theme_selected_bg_color;
+}
+
 iconview.view:backdrop {
     border-radius: 7px;
     background-color: transparent;
 }
 
 iconview.view:selected:backdrop {
+    border-radius: 7px;
+    background-color: @theme_unfocused_selected_bg_color;
+}
+
+iconview.view:selected:backdrop:hover {
     border-radius: 7px;
     background-color: @theme_unfocused_selected_bg_color;
 }
@@ -28,9 +43,15 @@ iconview.view:selected:backdrop {
     background-color: @hover_color;
 }
 
+.view > iconview:hover:selected {
+    border-radius: 7px;
+    background-color: @theme_selected_bg_color;
+}
+
 .view > iconview:backdrop {
     border-radius: 7px;
     background-color: transparent;
+    color: @theme_unfocused_fg_color;
 }
 
 .view > iconview:backdrop:hover {
