--- a/gtk-3.0/gtk.css
+++ b/gtk-3.0/gtk.css
@@ -57,3 +57,52 @@ iconview.view:selected:backdrop:hover {
 .view > iconview:backdrop:hover {
     background-color: @hover_color;
 }
+
+
+/* headerbar buttons */
+ 
+
+headerbar button.titlebutton.close, headerbar button.titlebutton.maximize, headerbar button.titlebutton.minimize,
+.titlebar button.titlebutton.close,
+.titlebar button.titlebutton.maximize,
+.titlebar button.titlebutton.minimize {
+    color: transparent;
+    background-color: transparent;
+    background-position: center;
+    background-repeat: no-repeat;
+    border-width: 0;
+}
+    
+headerbar button.titlebutton.close:backdrop, headerbar button.titlebutton.maximize:backdrop, headerbar button.titlebutton.minimize:backdrop,
+.titlebar button.titlebutton.close:backdrop,
+.titlebar button.titlebutton.maximize:backdrop,
+.titlebar button.titlebutton.minimize:backdrop {
+    opacity: 1;
+}
+
+headerbar button.titlebutton.close:hover, headerbar button.titlebutton.maximize:hover, headerbar button.titlebutton.minimize:hover,
+.titlebar button.titlebutton.close:hover,
+.titlebar button.titlebutton.maximize:hover,
+.titlebar button.titlebutton.minimize:hover {
+    opacity: 1;
+    border-color: transparent;
+    background-color: transparent;
+    box-shadow: inset 0 1px rgba(255, 255, 255, 0);
+    text-shadow: none;
+    -gtk-icon-shadow: none;
+    transition: none;
+}
+
+headerbar button.titlebutton.close, .titlebar button.titlebutton.close {
+     background-image: -gtk-scaled(url("assets/close.png"), url("assets/close.png"));
+}
+ headerbar button.titlebutton.maximize, .titlebar button.titlebutton.maximize {
+     background-image: -gtk-scaled(url("assets/max.png"), url("assets/max.png"));
+}
+ headerbar button.titlebutton.minimize, .titlebar button.titlebutton.minimize {
+     background-image: -gtk-scaled(url("assets/min.png"), url("assets/min.png"));
+}
+
+headerbar button.titlebutton.close:hover, .titlebar button.titlebutton.close:hover {
+    background-image: -gtk-scaled(url("assets/close-hover.png"), url("assets/close-hover.png"));
+}
