Add comment-outed panel preferences

--- a/gtk-3.0/gtk.css
+++ b/gtk-3.0/gtk.css
@@ -113,3 +113,17 @@ switch slider {
      min-width: 20px;
      min-height: 20px;
 }
+
+/* panel */
+
+/*
+.xfce4-panel {
+    -gtk-icon-style:  symbolic;
+}
+*/
+
+/*
+#whiskermenu-button  {
+    -gtk-icon-style:  symbolic;
+}
+*/
