--- a/pardus-dark/gtk-3.0/gtk.css
+++ b/pardus-dark/gtk-3.0/gtk.css
@@ -1,5 +1,6 @@
 @import url("resource:///org/gtk/libgtk/theme/Adwaita/gtk-contained-dark.css");
 @import url("colors.css");
+@import url("lightdm.css");
 
 
 /* iconview */
