--- a/pardus/gtk-3.0/gtk-dark.css
+++ b/pardus/gtk-3.0/gtk-dark.css
@@ -1,6 +1,6 @@
 @import url("resource:///org/gtk/libgtk/theme/Adwaita/gtk-contained-dark.css");
 @import url("colors-dark.css");
-
+@import url("lightdm.css");
 
 /* iconview */
 
