--- a/pardus/gtk-3.0/gtk.css
+++ b/pardus/gtk-3.0/gtk.css
@@ -168,3 +168,18 @@ switch slider {
 #whiskermenu-button  {
     -gtk-icon-style:  symbolic;
 }
+
+
+/* pardus-software */
+/********************/
+
+.pardus-software-frame > border{
+    border-radius: 5px;
+}
+
+.pardus-software-notebook.view,
+.pardus-software-notebook.frame,
+.pardus-software-notebook > *,
+.pardus-software-notebook > header *{
+    border-radius: 5px 5px 0 0;
+}
