--- a/pardus/gtk-3.0/gtk.css
+++ b/pardus/gtk-3.0/gtk.css
@@ -1,6 +1,8 @@
 @import url("resource:///org/gtk/libgtk/theme/Adwaita/gtk-contained.css");
 @import url("colors.css");
 @import url("lightdm.css");
+@import url("pardus-software.css");
+
 
 /* iconview */
 
@@ -167,19 +169,4 @@ switch slider {
 
 #whiskermenu-button  {
     -gtk-icon-style:  symbolic;
-}
-
-
-/* pardus-software */
-/********************/
-
-.pardus-software-frame > border{
-    border-radius: 5px;
-}
-
-.pardus-software-notebook.view,
-.pardus-software-notebook.frame,
-.pardus-software-notebook > *,
-.pardus-software-notebook > header *{
-    border-radius: 5px 5px 0 0;
 }
